--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -9,7 +9,7 @@ body {
   color: var(--color-text);
   padding: 0;
   margin: 0;
-  background-color: var(--color-dark);
+  background-color: var(--color-grey);
 }
 
 *,
