--- a/client/src/components/Sidebar/components/List/components/Item/index.module.scss
+++ b/client/src/components/Sidebar/components/List/components/Item/index.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   height: 72px;
+  cursor: pointer;
   &:not(:first-child) {
     .right {
       border-top: 1px solid var(--color-grey-dark);
