--- a/client/src/components/screens/Posts/index.module.scss
+++ b/client/src/components/screens/Posts/index.module.scss
@@ -1,7 +1,6 @@
-.list {
+.page {
   height: 100%;
-  background-color: transparent;
-  border-bottom: 1px solid var(--color-grey-dark);
+  background-color: var(--color-light-dark);
 
   overflow: scroll;
 
