created mapping user s posts and form to add user post. Also changed html markup to remove bug with height of posts list

--- a/client/src/components/UI/TextArea/index.module.scss
+++ b/client/src/components/UI/TextArea/index.module.scss
@@ -18,12 +18,16 @@
   background-color: var(--color-grey-dark);
   border: none;
   border-radius: 5px;
-  padding: 0 12px;
-  height: 33px;
+  padding: 0px 12px;
+  min-height: 33px;
+  max-height: 250px;
   width: 100%;
+  font-family: inherit;
   font-size: 14px;
   line-height: 17px;
   color: var(--color-text);
+
+  resize: none;
 
   &::-webkit-search-decoration,
   &::-webkit-search-cancel-button,
