--- a/client/src/components/PostList/index.module.scss
+++ b/client/src/components/PostList/index.module.scss
@@ -1,4 +1,18 @@
 .list {
-  margin-top: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-bottom: 10px;
+  overflow: scroll;
+
+  //scroll hidding
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+  &::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+  }
+}
+
+.postInput {
+  border-top: 1px dotted var(--color-grey);
+  padding-top: 10px;
 }
